# pro-chat

./: .gitignore  Cargo.toml  client.rs  generate.rs  readme.md  server.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
