[package]
name = "pro-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3.30"
base64 = "0.22.1"
rsa = "0.9.6"
rand = "0.8.5"

[[bin]]
name = "server"
path = "server.rs"

[[bin]]
name = "client"
path = "client.rs"

[[bin]]
name = "generate"
path = "generate.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"
codegen-units = 1
incremental = false
